--- a/packages/asset-risk/src/app/globals.css
+++ b/packages/asset-risk/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  @apply bg-white text-base text-black dark:bg-neutral-900 dark:text-white md:text-lg font-sans transition-colors;
+  @apply bg-gray-100 dark:bg-neutral-900 text-base text-black dark:text-white md:text-lg font-sans transition-colors;
 }
 
 @layer utilities {
