--- a/packages/frontend/src/styles/markdown.css
+++ b/packages/frontend/src/styles/markdown.css
@@ -106,7 +106,7 @@
 }
 
 .mdc a[data-link-role="glossary"] {
-  @apply font-medium text-blue-700 underline transition-colors hover:text-blue-550 dark:text-blue-500 dark:hover:text-blue-550;
+  @apply dark:text-blue-400 no-underline dark:hover:text-blue-450 text-blue-500/80 hover:text-blue-550/80;
 }
 
 .mdc img {
