chore: edit glossary link style

--- a/packages/frontend/src/styles/markdown.css
+++ b/packages/frontend/src/styles/markdown.css
@@ -106,7 +106,7 @@
 }
 
 .mdc a[data-link-role="glossary"] {
-  @apply underline decoration-dotted md:underline-offset-2
+  @apply underline decoration-dotted md:underline-offset-2 decoration-blue-700 dark:decoration-blue-500;
 }
 
 .mdc img {
