use markdown for faq answers

--- a/packages/frontend2/src/app/styles/globals.css
+++ b/packages/frontend2/src/app/styles/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import './markdown.css';
+
 body {
   @apply bg-white dark:bg-neutral-900 text-base text-black dark:text-white md:text-lg font-sans transition-colors;
 }
