--- a/packages/frontend/src/styles/markdown.css
+++ b/packages/frontend/src/styles/markdown.css
@@ -101,8 +101,12 @@
 }
 
 /* Make sure this is compatible with the <Link /> component */
-.mdc a {
+.mdc a:not([data-link-role="glossary"]) {
   @apply font-medium text-blue-700 underline transition-colors hover:text-blue-550 dark:text-blue-500 dark:hover:text-blue-550;
+}
+
+.mdc a[data-link-role="glossary"] {
+  @apply underline decoration-dotted md:underline-offset-2 decoration-blue-700 dark:decoration-blue-500;
 }
 
 .mdc img {
