--- a/packages/frontend2/src/styles/globals.css
+++ b/packages/frontend2/src/styles/globals.css
@@ -28,6 +28,12 @@ body {
   mask-image: linear-gradient(90deg, transparent, black 30px calc(100% - 30px), transparent) !important;
 }
 
+@layer utilities {
+  .transition-duration-50 {
+    transition-duration: 50ms !important;
+  }
+}
+
 /* For Webkit-based browsers (Chrome, Safari and Opera) */
 .scrollbar-hide::-webkit-scrollbar {
   display: none;
